--- a/client/src/App.css
+++ b/client/src/App.css
@@ -333,7 +333,9 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url('/img/health.jpg') no-repeat center center/cover;
+  background: url('./img/healthbuddyBackground.png') no-repeat center
+    center/cover;
+  padding-top: 20px;
   height: 100vh;
 }
 
@@ -575,4 +577,3 @@ button {
     padding: 0.3rem 0.4rem;
   }
 }
-
