--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,7 @@ footer {
 
 body {
   margin: 0;
-  padding-bottom: 2rem;
+  padding-bottom: 2.11rem;
   min-height: 100%;
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
@@ -323,8 +323,8 @@ button {
   justify-content: space-between;
   align-items: center;
   padding: 0.7rem 2rem;
-  position: fixed;
-  z-index: 1;
+  position: absolute;
+  /* z-index: 1; */
   width: 100%;
   top: 0;
   border-bottom: solid 1px var(--primary-color);
@@ -511,10 +511,6 @@ button {
 
 /* Mobile Styles */
 @media (max-width: 700px) {
-  .container {
-    margin-top: 8rem;
-  }
-
   .hide-sm {
     display: none;
   }
