--- a/client/src/components/auth/Register.css
+++ b/client/src/components/auth/Register.css
@@ -13,3 +13,15 @@
 .pass {
   color: #35db5a;
 }
+
+.ERROR {
+  display: table;
+  color: #dc3545;
+}
+
+.alertDisplay {
+  display: block;
+}
+.alert {
+  margin: 0;
+}
