No, I really fixed it this time... I swear

--- a/client/src/components/graph/graph.css
+++ b/client/src/components/graph/graph.css
@@ -19,7 +19,7 @@
 .graph {
   border-bottom: 3px solid #171717;
   background-color: #f9fafb;
-  margin: 0 15px 0 15px;
+  margin: 0 15px 30px 15px;
   border-radius: 15px;
 }
 
