fixed a few things, creates HB if none exists on first log entry now

--- a/client/src/components/layout/Landing.css
+++ b/client/src/components/layout/Landing.css
@@ -28,6 +28,12 @@
 
 @media all and (min-height: 1000px) {
   div.landing-inner {
-    margin-top: 400px;
+    margin-top: 290px;
+  }
+}
+
+@media all and (min-height: 1200px) {
+  div.landing-inner {
+    margin-top: 340px;
   }
 }
